[package]
name = "groqu"
description = "Groq API wrapper. One of the worst lmfao"
version = "0.1.3"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
ijson = "0.1.4"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
